[package]
name = "public-ip-address"
version = "0.2.0"
edition = "2021"
authors = ["Tomash Ghz <ghz.tomash@hotmail.com>"]
description = "A simple library for performing public IP and geolocation lookups from various services."
repository = "https://github.com/ghztomash/public-ip-address"
keywords = ["network", "geolocation", "geoip", "public", "ip" ]
categories = ["network-programming", "web-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
directories = "5.0"
thiserror = "1.0"

[dev-dependencies]
crossterm = { version = "0.27" }
ratatui = { version = "0.26" }
rusty-hook = { version = "0.11" }
serial_test = { version = "3.0" }
