[package]
name = "public-ip-address"
version = "0.2.2"
edition = "2021"
authors = ["Tomash Ghz <ghz.tomash@hotmail.com>"]
description = "A simple library for performing public IP and geolocation lookups from various services."
repository = "https://github.com/ghztomash/public-ip-address"
keywords = ["network", "geolocation", "geoip", "public", "ip" ]
categories = ["network-programming", "web-programming"]
license = "MIT OR Apache-2.0"

[features]
encryption = ["dep:cocoon", "dep:mid"]

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
thiserror = "1.0"
log = "0.4"
cocoon = { version = "0.4", optional = true }
mid = { version = "2.0", optional = true }

[dev-dependencies]
crossterm = { version = "0.27" }
ratatui = { version = "0.26" }
rusty-hook = { version = "0.11" }
serial_test = { version = "3.0" }
env_logger = { version = "0.11" }

[profile.dev.package.cocoon]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3
