[package]
name = "public-ip-address"
version = "0.3.5"
edition = "2021"
authors = ["Tomash Ghz <ghz.tomash@hotmail.com>"]
description = "A simple library for performing public IP and geolocation lookups from various services."
repository = "https://github.com/ghztomash/public-ip-address"
keywords = ["network", "geolocation", "geoip", "public", "ip"]
categories = ["network-programming", "web-programming"]
license = "MIT OR Apache-2.0"

[features]
default = ["default-tls"]
encryption = ["dep:cocoon", "dep:mid"]
blocking = ["maybe-async/is_sync", "reqwest/blocking"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
reqwest = { version = "0.12.20", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
maybe-async = "0.2"
cocoon = { version = "0.4", optional = true }
mid = { version = "4.0", optional = true }
etcetera = "0.11"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
crossterm = { version = "0.29" }
ratatui = { version = "0.29" }
rusty-hook = { version = "0.11" }
serial_test = { version = "3.2" }
env_logger = { version = "0.11" }
wiremock = { version = "0.6" }

[profile.dev.package.cocoon]
opt-level = 3
[profile.dev.package.sha2]
opt-level = 3

[[example]]
name = "blocking"
required-features = ["blocking"]
